--- a/amazon-clone/src/Header.css
+++ b/amazon-clone/src/Header.css
@@ -14,3 +14,8 @@
   margin: 0 20px;
   margin-top: 18px;
 }
+.header_searchIcon{
+  padding: 5px;
+  height: 22px !important ;
+  background-color: #cd9042;
+}
