--- a/amazon-clone/src/Header.css
+++ b/amazon-clone/src/Header.css
@@ -22,6 +22,13 @@
   border-radius: 24px;
 }
 
+.header_searchInput{
+  height: 12px;
+  padding: 10px;
+  border: none;
+  width: 100%;
+}
+
 .header_searchIcon{
   padding: 5px;
   height: 22px !important ;
