--- a/amazon-clone/src/Product.css
+++ b/amazon-clone/src/Product.css
@@ -12,6 +12,10 @@
   z-index: 1;
 }
 
+.product_rating{
+  display: flex;
+}
+
 .product > img{
   max-height: 200px;
   width: 100%;
@@ -19,7 +23,8 @@
   margin-bottom: 15px;
 }
 
-.product > button {
+
+.product > button{
   background: #f0c14b;
   border: 1px solid;
   margin-top: 10px;
